    HDMD_Perl_Tiny, eliminated all Muldis D specific character escaping;
    now, if you want to have literal perod characters in chain elements,
    then you must use the Array payload format; also an empty string in the
    string payload format now means a single-element DeclNameChain; you
    must use the Array payload format to represent a zero-element chain.

    * (Routines.pod)  Updated the function "read_Text" to rename its
    "length_in_graphemes" parameter to "length_in_codepoints"; this was
    supposed to have been done for release 0.51.0 but was missed.

2008-11-29  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.52.0 is released on CPAN as
    Muldis-D-0.52.0.tar.gz.

    * As of this release, all (non-archive) versioned files have had their
    version numbers increased to match the version number of the release
    itself, or in other words, to match the version number of D.pm; from
    now on, all file versions will increment in lockstep regardless of
    whether any actual (other) changes were made to the files in question.
    This means that the meaning of the file version numbers has changed
    from treating each file as a distinct document whose progress is
    tracked, to being a component of the Muldis D language spec as a whole,
    such that if any file is seen in isolation, it can more easily be
    matched up with other files that form parts of the same Muldis D
    language spec version.  This also makes further updates to the spec
    easier since managing many distinct version numbers was a lot more work
    and error-prone; examples of such errors were that the previous 2
    releases (50 and 51) both forgot to increment their changed .pod files'
    internal versions like the Changes file of those releases said they
    were.  To see what actual changes were made to files, the individual
    change items still will list them as they did before.

    * (D.pm, Basics.pod, Types.pod, Routines.pod, PTMD_Tiny.pod,