@@ -14,7 +14,8 @@ lib/Muldis/D/Core/Routines.pod
 lib/Muldis/D/Core/Routines_Catalog.pod
 lib/Muldis/D/Core/Types.pod
 lib/Muldis/D/Core/Types_Catalog.pod
-lib/Muldis/D/Dialect/HDMD_Perl_Tiny.pod
+lib/Muldis/D/Dialect/HDMD_Perl5_Tiny.pod
+lib/Muldis/D/Dialect/HDMD_Perl6_Tiny.pod
 lib/Muldis/D/Dialect/PTMD_Tiny.pod
 lib/Muldis/D/Ext/Array.pod
 lib/Muldis/D/Ext/Bag.pod
