@@ -25,22 +25,23 @@ this distribution, I recommend doing so in this order:
        c.       lib/Muldis/D/Core/Routines.pod
        d.       lib/Muldis/D/Core/Routines_Catalog.pod
    6. (opt) lib/Muldis/D/Dialect/PTMD_Tiny.pod
-   7.       lib/Muldis/D/Dialect/HDMD_Perl_Tiny.pod
-   8. (opt) lib/Muldis/D/Conventions.pod
-   9.       lib/Muldis/D/Ext/Ordered.pod
-  10.       lib/Muldis/D/Ext/Integer.pod
-  11. (opt) lib/Muldis/D/Ext/Blob.pod
-  12.       lib/Muldis/D/Ext/Text.pod
-  13. (opt) lib/Muldis/D/Ext/Tuple.pod
-  14.       lib/Muldis/D/Ext/Relation.pod
-  15.       lib/Muldis/D/Ext/Set.pod
-  16.       lib/Muldis/D/Ext/Array.pod
-  17. (opt) lib/Muldis/D/Ext/Bag.pod
-  18.       lib/Muldis/D/Ext/Rational.pod
-  19. (opt) lib/Muldis/D/Ext/Temporal.pod
-  20. (opt) lib/Muldis/D/Ext/Spatial.pod
-  21.       lib/Muldis/D/SeeAlso.pod
-  22. (opt) TODO
+   7.       lib/Muldis/D/Dialect/HDMD_Perl6_Tiny.pod
+   8.       lib/Muldis/D/Dialect/HDMD_Perl5_Tiny.pod
+   9. (opt) lib/Muldis/D/Conventions.pod
+  10.       lib/Muldis/D/Ext/Ordered.pod
+  11.       lib/Muldis/D/Ext/Integer.pod
+  12. (opt) lib/Muldis/D/Ext/Blob.pod
+  13.       lib/Muldis/D/Ext/Text.pod
+  14. (opt) lib/Muldis/D/Ext/Tuple.pod
+  15.       lib/Muldis/D/Ext/Relation.pod
+  16.       lib/Muldis/D/Ext/Set.pod
+  17.       lib/Muldis/D/Ext/Array.pod
+  18. (opt) lib/Muldis/D/Ext/Bag.pod
+  19.       lib/Muldis/D/Ext/Rational.pod
+  20. (opt) lib/Muldis/D/Ext/Temporal.pod
+  21. (opt) lib/Muldis/D/Ext/Spatial.pod
+  22.       lib/Muldis/D/SeeAlso.pod
+  23. (opt) TODO
 
 Then you can carry on with anything else.
 
