@@ -53,7 +53,8 @@ colon after first element, and then semicolon between any 2nd/3rd etc.  Or
 use a delimiter pair such as <> following the first element and surrounding
 all remaining ones, any multiple remaining being semicolon delimited.
 
-* Split up the 1 HDMD_Perl_Tiny dialect into the 2 HDMD_Perl(6|5)_Tiny
+* IN PROGRESS ...
+Split up the 1 HDMD_Perl_Tiny dialect into the 2 HDMD_Perl(6|5)_Tiny
 dialects, and don't be afraid to let them grow apart.  For example, the
 Perl 6 version can use Pair objects as the basis for most nodes, eg
 ":Text<Foo>" or ":Int(:3<21>)", rather than Array/Seq, and the p6v can
