@@ -135,7 +135,8 @@ another language will essentially use literals of corresponding host
 language types, whatever they use for eg booleans and integers and
 character strings, but tagged with extra meta-data if the host language is
 more weakly typed or lacks one-to-one type correspondence; see
-L<Muldis::D::Dialect::HDMD_Perl_Tiny> for a Perl-based example.  These
+L<Muldis::D::Dialect::HDMD_Perl6_Tiny> or
+L<Muldis::D::Dialect::HDMD_Perl5_Tiny> for a Perl 6|5-based example.  These
 types, except for C<Scalar>, are all ordered.
 
 =head2 sys.std.Core.Type.Scalar
