@@ -33,8 +33,9 @@ round-trippable with the system catalog with the result maintaining all the
 details that were started with.  Since it matches the system catalog, this
 dialect should be able to exactly represent all possible Muldis D base
 language code (and probably all extensions too), rather than a subset of
-it.  This dialect similarly matches the C<HDMD_Perl_Tiny> dialect, which is
-documented at L<Muldis::D::Dialect::HDMD_Perl_Tiny>.
+it.  This dialect similarly matches the dialects
+L<HDMD_Perl6_Tiny|Muldis::D::Dialect::HDMD_Perl6_Tiny> and
+L<HDMD_Perl5_Tiny|Muldis::D::Dialect::HDMD_Perl5_Tiny>.
 
 This dialect is designed to be as small as possible while meeting the above
 criteria, and is designed such that a parser that handles all of this
@@ -53,7 +54,8 @@ See instead L<Muldis::D::Core> for how to actually define the
 tuples and relations that define your data types and routines and queries
 and so forth.
 
-See also L<Muldis::D::Dialect::HDMD_Perl_Tiny> and look up its
+See also L<HDMD_Perl6_Tiny|Muldis::D::Dialect::HDMD_Perl6_Tiny> or
+L<HDMD_Perl5_Tiny|Muldis::D::Dialect::HDMD_Perl5_Tiny> and look up its
 syntax for representing Muldis D literal values, each syntax item typically
 corresponds to a syntax item in the current document; the other document
 helps explain the meaning of and further constraints on value
@@ -89,7 +91,8 @@ indent, linewrap, order) code how they like, and making an automated code
 reformatter shouldn't be difficult.  Often, named elements can also be
 omitted entirely for brevity, in which case the parser would use context to
 supply default values for those elements.  These qualities are all shared
-by the C<HDMD_Perl_Tiny> dialect too.
+by the dialects L<HDMD_Perl6_Tiny|Muldis::D::Dialect::HDMD_Perl6_Tiny> and
+L<HDMD_Perl5_Tiny|Muldis::D::Dialect::HDMD_Perl5_Tiny> too.
 
 =head1 GRAMMAR OF TINY PLAIN TEXT MULDIS D
 
