@@ -31,6 +31,14 @@
     string payload format now means a single-element DeclNameChain; you
     must use the Array payload format to represent a zero-element chain.
 
+    * (HDMD_Perl6_Tiny.pod, HDMD_Perl5_Tiny.pod, D.pm, Basics.pod,
+    Types.pod, PTMD_Tiny.pod)  Cloned the 1 file HDMD_Perl_Tiny.pod once
+    and renamed the original and copy into HDMD_Perl(6|5)_Tiny.pod
+    respectively.  Updated each copy so it specifies that it talks about a
+    dialect optimized for Perl (6|5) rather than talking about a more
+    generic dialect for both Perl versions.  Updated all other distro files
+    that referred to the old 1 file so they refer to the new 2 instead.
+
     * (Routines.pod)  Updated the function "read_Text" to rename its
     "length_in_graphemes" parameter to "length_in_codepoints"; this was
     supposed to have been done for release 0.51.0 but was missed.
